--- a/priklad01.tex
+++ b/priklad01.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage{graphicx}
-%\usepackage{lipsum}
-%\usepackage{blindtext}
+\usepackage{lipsum}
+\usepackage{blindtext}
 
 
 \title{Metódy inžinierskej práce 2023}
@@ -14,6 +14,6 @@
 
 \section{Introduction}
 %\lipsum[1-3]
-%\Blinddocument
+\Blinddocument
 
 \end{document}
