--- a/priklad01.tex
+++ b/priklad01.tex
@@ -17,6 +17,9 @@
 \section{Section added in remote}
 %\lipsum[1-3]
 
+\section{Section added within lecture}
+%\lipsum[1-3]
+
 \Blinddocument
 
 \end{document}
